--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["R2022a"]
+        version: ["R2016b"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
     runs-on: ${{matrix.os}}
     steps:
@@ -26,7 +26,7 @@ jobs:
       #   with:
       #     command: addpath(pwd); results = runtests('tests'), assertSuccess(results);
       - name: Compile MEX file
-        run: mex -R2016b jsonread.c jsmn.c -DJSMN_PARENT_LINKS
+        run: mex jsonread.c jsmn.c -DJSMN_PARENT_LINKS
       # - name: Run tests with newly compiled MEX files
       #   uses: matlab-actions/run-command@v1
       #   with:
